syntax = "proto3";

service ShadowService {
  rpc SubscribeToUpdates(SubscriptionRequest) returns (stream UpdateMessage);
}

message SubscriptionRequest {
  string clientId = 1;
}

message UpdateMessage {
  string message = 1;
  int64 timestamp = 2;
}
