syntax = "proto3";

option csharp_namespace = "ShadowScan_Client";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string TeacherHostname = 1;
}

// The response message containing the greetings.
message HelloReply {
  bool status = 1;
}
